<resources>
    <string name="app_name">Starwars</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for fragments for navigation -->
    <string name="character_list_fragment_label">Liste des personnages</string>
    <string name="character_detail_fragment_label">Détail du personnage</string>
    <string name="next">Suivant</string>
    <string name="previous">Précédent</string>

    <!-- Descriptions -->
    <string name="not_defined_description">Ce champ n\'est pas défini</string>
    <string name="character_list_item_button_description">Bouton pour naviger vers la page de détail du personnage %1$s</string>
    <string name="character_gender_description">Le genre du personnage %1$s</string>
    <string name="character_height_description">La grandeur du personnage %1$s</string>
    <string name="character_count_description">Le nombre total de personnage dans la liste.</string>
    <string name="character_height_average_description">La moyenne de grandeur des personnages dans la liste.</string>
    <string name="total_character">Total - personnage</string>
    <string name="average_height">Moyenne - grandeur</string>
    <string name="character_detail_image_view_description">Photo du personnage %1$s</string>
    <string name="homeworld_image_view_description">Photo de la planète %1$s</string>

    <!-- Messages -->
    <string name="empty_starship_list_message">Il n\'y a aucun vaisseau d\'associé à ce personnage.</string>

    <!-- Titles -->
    <string name="summary_title">Sommaire</string>
    <string name="height_title">Grandeur</string>
    <string name="homeland_title">Planète de naissance</string>
    <string name="starships_title">Vaisseaux</string>

    <!-- Character -->
    <string name="height">%1$s cm</string>
    <string name="gender">Genre</string>
    <string name="updated_at">Modifié le %1$s</string>

    <!-- Starships & vehicules -->
    <string name="max_speed">%1$s km/h</string>

    <!-- Gender types -->
    <string name="male">Homme</string>
    <string name="female">Femme</string>
    <string name="unknown">Inconnu</string>
</resources>