<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="128dp"
        android:layout_margin="8dp"
        android:layout_weight="1"
        app:cardElevation="5dp"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <ImageView
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_baseline_groups_24"
                app:tint="@color/black"
                android:contentDescription="@string/character_count_description" />

            <TextView
                android:id="@+id/characterCountTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                tools:text="123" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/total_character"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="128dp"
        android:layout_margin="8dp"
        android:layout_weight="1"
        app:cardElevation="5dp"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <ImageView
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_baseline_height_24"
                app:tint="@color/black"
                android:contentDescription="@string/character_height_average_description" />

            <TextView
                android:id="@+id/characterAverageHeightTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                tools:text="123" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/average_height"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>